--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        background-color: #000;
+        color: #fff;
       }
       .gradient-text {
         background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 50%, #ec4899 100%);
@@ -29,34 +31,27 @@
         50% { transform: translateY(-8px); }
       }
 
-      @keyframes soft-pulse {
-        0%, 100% { opacity: 1; transform: scale(1); }
-        50% { opacity: 0.85; transform: scale(1.05); }
-      }
-
       .animate-subtle-float {
         animation: subtle-float 3s ease-in-out infinite;
       }
-
-      .animate-soft-pulse {
-        animation: soft-pulse 4s ease-in-out infinite;
-      }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-        "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-        "react/": "https://esm.sh/react@^19.2.4/",
-        "react": "https://esm.sh/react@^19.2.4",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
-      }
-    }
-    </script>
-    <!-- Explicitly import the entry point for static deployment reliability -->
+{
+  "imports": {
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3"
+  }
+}
+</script>
     <script type="module" src="./index.tsx"></script>
   </head>
   <body class="bg-black text-white antialiased overflow-x-hidden">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
