--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
   "imports": {
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3"
@@ -51,7 +52,7 @@
     <script type="module" src="./index.tsx"></script>
   </head>
   <body class="bg-black text-white antialiased overflow-x-hidden">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. This is likely why you see a blank page if JS is disabled.</noscript>
     <div id="root"></div>
   </body>
 </html>
